Set display for div with class container-board and border for div with class container-symbol
Make square to contain symbol from player. Board contain three columns and three rows.

Set grid in div with class container-board for adjust position of display symbol container.

--- a/style.css
+++ b/style.css
@@ -2,4 +2,11 @@
     height: max(300px, 30dvh);
     width: max(300px, 30dvw);
     border: 1px solid black;
+    display: grid;
+    grid-template: repeat(3, 1fr)/repeat(3, 1fr);
+}
+
+
+.container-symbol{
+    border: 1px solid black;
 }
