Set design for div with class container symbol
Increase display symbol size in div with class container symbol for fit box size of board.

Make symbol in center position by display flex for fit design of  tic tac toe and make both of players easier to read board game.

--- a/style.css
+++ b/style.css
@@ -9,4 +9,8 @@
 
 .container-symbol{
     border: 1px solid black;
+    font-size: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
